# jarvis-devops

./: .gitignore  compose.yaml
backend/migrator/: config.py  pyproject.toml
backend/migrator/migrations/: env.py
backend/migrator/migrations/versions/: 811794f6c62e_initial_migration.py  b8229e543e22_removed_last_name_field_from_user_model.py  e46dd6497cfd_added_last_name_field_to_user_model.py
backend/services/auth/: Dockerfile  docker.env  main.py
backend/services/auth/app/models/: user.py
backend/services/notes/: Dockerfile  docker.env  main.py
