[project]
name = "jarvis-migrator"
version = "0.1.0"
description = "Database migration service for Jarvis"
requires-python = ">=3.10"
dependencies = [
    "sqlalchemy>=2.0.0",
    "alembic>=1.16.4",
    "psycopg2-binary>=2.9.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "shared",
]

[tool.uv.sources]
shared = { path = "../utilities" }
